2005-06-23 J.R. Heisey <jrheisey@sourceforge.com>
	* plat/win32/gpsim.def, src/symbol.cc, src/symbol.h:
	register_symbol::m_uMask is used to mask out bits not
	associated with the symbol after retrieving the value
	from the register. Masked bit values are right shifted such
	that if the 16th bit is high in the register and
	m_uMask = 0x80, then the symbol value returned	
	or displayed will be one.	
	Likewise to set the 16th bit of our example register_symbol 
	you would set the register_symbol value to 0x01 and
	not 0x80. No other bits in the register are changed.
	It works as if this symbol is its own register. The encoding
	into the target register is hidden by register_symbol.
	The default value of m_uMask is 0xff so that no bits are
	masked out.
	An new version of Symbol_Table::add_register() may be used
	to add masked register_symbol objects to the symbol table.
	register_symbol::copy() is changed to return the correct
	symbol string.

2005-06-21 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_run.cc: Added help text saying that CTRL->C
	will stop a running simulation.

	* src/breakpoints.cc, src/processor.cc, src/processor.h,
	src/trace.cc, plat/win32/gpsim.def, gui/gui_profile.cc,
	gui/gui_src_asm.cc:
	There was significant ambiguity for some functions
	that appear to accept an simulation address but acted upon
	it as a ProgramMemoryAccess index. The ProgramMemoryAccess 
	indexing operator was a prime example. I have eliminated
	the indexing operator and added the functions getFromAddress()
	and getFromIndex() to make things more explicitly clear.
	I have also removed put() and get() and added putToAddress()
	and putToIndex(). Other new functions are
	hasValid_opcode_at_address() and hasValid_opcode_at_index().
	This mostly effected gui code so the simulation itself
	should have no impact.
	The original intent of this change was to fix bugs in the 
	gui where double clicking on a breakpoint icon in the
	source window would not toggle the breakpoint.
